--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ on:
   pull_request:
     branches:
       - main
+  workflow_dispatch:      # 允许手动触发
+  
 
 concurrency:
   group: ${{ github.workflow }}-$${{ github.head_ref || github.run_id }}
